2006-05-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/mcs51/Makefile.in: changed string comparison operator
	  to = for POSIX compliance; == is bash extension

2006-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/hc08/_mulint.c: applied patch 1485428, thanks
	  kosmonaut_pirx

2006-05-09 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/gen.c (pic16_freeAsmop): release any temp registers
	allocated by aopForSym thus fixing bug #1478657 about failed testfwk.c
	* src/pic16/main.c (_pic16_keywords): added 'sfr16' keyword,
	* src/pic16/ralloc.c (pic16_allocWithIdx): also a fix for bug exposed by
	bug report #1478657,

2006-05-05 Borut Razem <borut.razem AT siol.net>

	* doc/Makefile.in: remove of WARNINGS and labels.pl immediately after
	  making the html

2006-05-02 Borut Razem <borut.razem AT siol.net>

	* doc/Makefile.in: removed *.ind dependency since there is no rule to
	  create *.ind, which made make to fail if invoked with -j 2

2006-05-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (emitRegularMap): partial fix for bug 1477149, thanks
	  Hubert Sack for patch 1479782

2006-05-01 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/glue.c (pic16_printIvalStruct): fixed bug #1445929

2006-05-01 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (sanitise_processor_name): only remove p(ic) prefix,
	  (create_pic): store only prefix-free device name,
	  (init_pic): check for device names with "16" prefix,
	  (list_valid_pics),
	* src/pic/device.h (struct PIC_device),
	* src/pic/main.c (_pic14_genAssemblerPreamble): adapted to single
	    stored device name,
	* device/include/pic/pic12f{635,675,629,683}.h,
	* device/lib/pic/libdev/pic12f{635,675,629,683}.c: NEW device libraries
	* device/lib/pic/libdev/Makefile.in: allow pic12* devices,
	* device/include/pic/pic16f505.h,
	* device/lib/pic/libdev/pic16f505.c: removed
	* device/include/pic/pic14devices.txt: added support for pic12f